@@ -207,9 +207,11 @@ installbyt:
 	cd byterun ; $(MAKEREC) install
 	cp ocamlc "$(INSTALL_BINDIR)/ocamlc.exe"
 	cp ocaml "$(INSTALL_BINDIR)/ocaml.exe"
+	cp ocamlc "$(INSTALL_BINDIR)/ocamlc.byte.exe"
 	cd stdlib ; $(MAKEREC) install
 	cp lex/ocamllex "$(INSTALL_BINDIR)/ocamllex.exe"
 	cp yacc/ocamlyacc.exe "$(INSTALL_BINDIR)/ocamlyacc.exe"
+	cp lex/ocamllex "$(INSTALL_BINDIR)/ocamllex.byte.exe"
 	cp utils/*.cmi utils/*.cmt utils/*.cmti \
 	   parsing/*.cmi parsing/*.cmt parsing/*.cmti \
 	   typing/*.cmi typing/*.cmt typing/*.cmti \
@@ -256,6 +258,7 @@ install-flexdll:
 installopt:
 	cd asmrun && $(MAKEREC) install
 	cp ocamlopt "$(INSTALL_BINDIR)/ocamlopt.exe"
+	cp ocamlopt "$(INSTALL_BINDIR)/ocamlopt.byte.exe"
 	cd stdlib && $(MAKEREC) installopt
 	cp middle_end/*.cmi middle_end/*.cmt middle_end/*.cmti \
 		"$(INSTALL_COMPLIBDIR)"
@@ -279,6 +282,9 @@ installoptopt:
 	cp ocamlc.opt "$(INSTALL_BINDIR)/ocamlc.opt$(EXE)"
 	cp ocamlopt.opt "$(INSTALL_BINDIR)/ocamlopt.opt$(EXE)"
 	cp lex/ocamllex.opt "$(INSTALL_BINDIR)/ocamllex.opt$(EXE)"
+	cp ocamlc.opt "$(INSTALL_BINDIR)/ocamlc$(EXE)"
+	cp ocamlopt.opt "$(INSTALL_BINDIR)/ocamlopt$(EXE)"
+	cp lex/ocamllex.opt "$(INSTALL_BINDIR)/ocamllex$(EXE)"
 	cp utils/*.cmx parsing/*.cmx typing/*.cmx bytecomp/*.cmx \
            driver/*.cmx asmcomp/*.cmx "$(INSTALL_COMPLIBDIR)"
 	cp compilerlibs/ocamlcommon.cmxa compilerlibs/ocamlcommon.$(A) \
